# lau-singular-spde

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: lib.rs
src/holders/: mod.rs
src/plato/: mod.rs
src/regularity/: mod.rs
src/rg/: mod.rs
src/spde/: mod.rs
src/universal/: mod.rs
src/wick/: mod.rs
