[package]
name = "lau-singular-spde"
version = "0.1.0"
edition = "2021"
description = "Singular stochastic PDE formulation of agent learning dynamics with Hairer's regularity structures and renormalization"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-singular-spde"
keywords = ["spde", "regularity-structures", "renormalization", "stochastic", "agent-learning"]
categories = ["mathematics", "science"]

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_distr = "0.4"
thiserror = "1"

[dev-dependencies]
approx = "0.5"
